[gd_scene load_steps=3 format=3 uid="uid://n3v1mvmtakc"]

[ext_resource type="Script" path="res://scences/ui/card_tooltip.gd" id="1_lg5lu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anma6"]
size = Vector2(40, 50)

[node name="CardTooltip" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -220.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lg5lu")

[node name="TooltipBackground" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 49.0
offset_right = 114.0
offset_bottom = 44.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="TooltipBackground"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipBackground/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="CardDescription" type="RichTextLabel" parent="TooltipBackground/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
bbcode_enabled = true
text = "[center]Attack - Deal [color=\"ff0000\"]damage[/color] to an enemy[/center]


"
fit_content = true
scroll_active = false

[node name="Hitbox" type="Control" parent="."]
anchors_preset = 0
offset_left = 5.0
offset_right = 45.0
offset_bottom = 50.4

[node name="Area2D" type="Area2D" parent="Hitbox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox/Area2D"]
position = Vector2(20, 25)
shape = SubResource("RectangleShape2D_anma6")

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_hitbox_mouse_exited"]
